# PortfolioManager

./: CMakeLists.txt  main.cpp  portfolio_manager.cpp  portfolio_manager.h  portfolio_manager.ui  portfolio_title_dlg.cpp  portfolio_title_dlg.h  portfolio_title_dlg.ui  profile_wdg.cpp  profile_wdg.h  profile_wdg.ui  resources.qrc
